# truth_cones

./: AI_DISCLAIMER.md  README.md  config.ini  pyproject.toml
configs/: alignment.yaml  patching.yaml  retention.yaml  tco.yaml  tdo.yaml
datasets/: animals.csv  animals_contrastive.csv  cities_contrastive.csv  elements.csv  elements_contrastive.csv
experimental_outputs/exp1_patching/: gemma-2-2b-it_animals_heatmap_20260508_191848_weights.npz  gemma-2-2b-it_cities_heatmap_20260508_190954_weights.npz  gemma-2-2b-it_elements_heatmap_20260508_192913_weights.npz  gemma-2-2b-it_patching_20260508_192913_manifest.json  gemma-2-9b-it_animals_heatmap_20260512_023911_weights.npz  gemma-2-9b-it_animals_heatmap_20260512_030612_weights.npz  gemma-2-9b-it_animals_heatmap_20260512_031950_weights.npz  gemma-2-9b-it_cities_heatmap_20260512_022544_weights.npz  gemma-2-9b-it_cities_heatmap_20260512_023410_weights.npz  gemma-2-9b-it_cities_heatmap_20260512_030539_weights.npz  gemma-2-9b-it_cities_heatmap_20260512_031504_weights.npz  gemma-2-9b-it_elements_heatmap_20260512_024444_weights.npz  gemma-2-9b-it_elements_heatmap_20260512_030644_weights.npz  gemma-2-9b-it_elements_heatmap_20260512_032859_weights.npz  gemma-2-9b-it_patching_20260512_024444_manifest.json  gemma-2-9b-it_patching_20260512_030644_manifest.json  layer_selection.json  (+19 more)
paper/: ai_disclaimer.tex  paper_revised.bbl  paper_revised.tex  references.bib
scripts/: clean_up.sh  run_alignment.py  run_all.sh  run_patching.py  run_retention.py  run_tco.py  run_tdo.py
src/: __init__.py  config.py  logging_setup.py
(+177 files in other folders)
