[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-linearity"
version = "0.1.0"
description = "The multidimensional geometry of truth in LLMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ilyass Ouardi" }]

dependencies = [
    "torch>=2.4.0",
    "nnsight>=0.3.7",
    "transformers>=4.45,<4.50",
    "huggingface_hub>=0.23.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "numpy<2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "kaleido>=0.2.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
